--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,5 @@ dependencies {
 
 	implementation 'com.google.firebase:firebase-admin:6.9.0'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
-//	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
 }
